--- a/frontend/src/components/AddProfile.css
+++ b/frontend/src/components/AddProfile.css
@@ -30,7 +30,7 @@
     border-radius: 5px;
   }
   .btn-primary {
-    background: blue;
+    background: rgb(3, 3, 148);
     color: white;
     padding: 8px 16px;
     border: none;
